# DailyFin

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  search_targets.xlsx
src/dailyfin/: main.py
src/dailyfin/api/: news_api.py
src/dailyfin/backend/: models.py
src/dailyfin/core/: connection.py  logger.py
src/dailyfin/crawler/: news_collector.py  news_crawler_main.py  news_gpt_generate.py  news_saver.py
src/dailyfin/frontend/: frontend_routes.py  index.html
src/dailyfin/frontend/static/: script.js  style.css
